--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ googleAnalytics = "UA-78420704-1"
   logo = "img/profile.png"
   favicon = "favicon.ico"
   dateFormat = "January 2, 2006"
-  commit = false
+  commit = "https://github.com/jwon/blog.jwon.me/tree/"
   rss = true
   comments = true
 #  gcse = "012345678901234567890:abcdefghijk" # Get your code from google.com/cse. Make sure to go to "Look and Feel" and change Layout to "Full Width" and Theme to "Classic"
