--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "/home/jwon"
 theme = "beautifulhugo"
 metaDataFormat = "yaml"
 pygmentsUseClasses = true
-pygmentCodeFences = true
+pygmentsCodeFences = true
 disqusShortname = "blog-jwon-me"
 googleAnalytics = "UA-78420704-1"
 
