--- a/config.toml
+++ b/config.toml
@@ -1,94 +1,85 @@
-baseurl = "https://blog.jwon.me/"
-DefaultContentLanguage = "en"
+baseURL = "https://blog.jwon.me"
+languageCode = "en-us"
+defaultContentLanguage = "en"
 title = "/home/jwon"
-theme = "beautifulhugo"
-metaDataFormat = "yaml"
-pygmentsUseClasses = true
-pygmentsCodeFences = true
-disqusShortname = "blog-jwon-me"
+theme = "hermit"
+# enableGitInfo = true
+pygmentsCodefences  = true
+pygmentsUseClasses  = true
+# hasCJKLanguage = true  # If Chinese/Japanese/Korean is your main content language, enable this to make wordCount works right.
+rssLimit = 10  # Maximum number of items in the RSS feed.
+copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License." # This message is only used by the RSS template.
+enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/functions/emojify/
 googleAnalytics = "UA-78420704-1"
+disqusShortname = "blog-jwon-me"
 
-[Params]
-  subtitle = "jwon's Blog to Life, Tech, and Anything Else Interesting"
-  logo = "img/profile.png"
-  favicon = "favicon.ico"
-  dateFormat = "January 2, 2006"
-  commit = "https://github.com/jwon/blog.jwon.me/tree/"
-  rss = true
-  comments = true
-#  gcse = "012345678901234567890:abcdefghijk" # Get your code from google.com/cse. Make sure to go to "Look and Feel" and change Layout to "Full Width" and Theme to "Classic"
-
-#[[Params.bigimg]]
-#  src = "img/triangle.jpg"
-#  desc = "Triangle"
-#[[Params.bigimg]]
-#  src = "img/sphere.jpg"
-#  desc = "Sphere"
-#[[Params.bigimg]]
-#  src = "img/hexagon.jpg"
-#  desc = "Hexagon"
-
-[Author]
+[author]
   name = "James Won"
-  website = "https://www.jwon.me"
-  email = "blog@jwon.me"
-  #facebook = "username"
-  #googleplus = "+username" # or xxxxxxxxxxxxxxxxxxxxx
-  github = "jwon"
-  #gitlab = "username"
-  twitter = "jwon_me"
-  #reddit = "username"
-  linkedin = "jameswon"
-  #xing = "username"
-  #stackoverflow = "users/XXXXXXX/username"
-  #snapchat = "username"
-  #instagram = "username"
-  #youtube = "user/username" # or channel/channelname
-  #soundcloud = "username"
-  #spotify = "username"
-  #bandcamp = "username"
-  #itchio = "username"
-  #vk = "username"
-  #paypal = "username"
-  #telegram = "username"
 
 [blackfriday]
-  fractions = false
+  # hrefTargetBlank = true
+  # noreferrerLinks = true
+  # nofollowLinks = true
 
-[[menu.main]]
-    name = "Blog"
-    url = ""
-    weight = 1
+[taxonomies]
+  tag = "tags"
+  # Categories are disabled by default.
 
-[[menu.main]]
-    name = "About"
-    url = "page/about/"
-    weight = 3
+[params]
+  dateform        = "Jan 2, 2006"
+  dateformShort   = "Jan 2"
+  dateformNum     = "2006-01-02"
+  dateformNumTime = "2006-01-02 15:04 -0700"
 
-#[[menu.main]]
-#    identifier = "samples"
-#    name = "Samples"
-#    weight = 2
-#
-#[[menu.main]]
-#    parent = "samples"
-#    name = "Big Image Sample"
-#    url = "post/2017-03-07-bigimg-sample"
-#    weight = 1
-#
-#[[menu.main]]
-#    parent = "samples"
-#    name = "Math Sample"
-#    url = "post/2017-03-05-math-sample"
-#    weight = 2
-#
-#[[menu.main]]
-#    parent = "samples"
-#    name = "Code Sample"
-#    url = "post/2016-03-08-code-sample"
-#    weight = 3
+  # Metadata mostly used in document's head
+  # description = ""
+  # images = [""]
+  themeColor = "#494f5c"
 
-[[menu.main]]
+  homeSubtitle = "jwon's Blog to Life, Tech, and Anything Else Interesting"
+  footerCopyright = ' &#183; <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
+  # bgImg = ""  # Homepage background-image URL
+
+  # Prefix of link to the git commit detail page. GitInfo must be enabled.
+  # gitUrl = "https://github.com/username/repository/commit/"
+
+  # Toggling this option needs to rebuild SCSS, requires Hugo extended version
+  justifyContent = false  # Set "text-align: justify" to `.content`.
+
+  # Add custom css
+  # customCSS = ["css/foo.css", "css/bar.css"]
+
+  # Social Icons
+  # Check https://github.com/Track3/hermit#social-icons for more info.
+  [[params.social]]
+    name = "twitter"
+    url = "https://twitter.com/jwon_me"
+
+  [[params.social]]
+    name = "github"
+    url = "https://github.com/jwon"
+
+  [[params.social]]
+    name = "linkedin"
+    url = "https://www.linkedin.com/in/jameswon/"
+
+  [[params.social]]
+    name = "email"
+    url = "mailto:blog@jwon.me"
+
+[menu]
+
+  [[menu.main]]
+    name = "Posts"
+    url = "posts/"
+    weight = 10
+
+  [[menu.main]]
     name = "Tags"
-    url = "tags"
-    weight = 3
+    url = "tags/"
+    weight = 20
+
+  [[menu.main]]
+    name = "About"
+    url = "about/"
+    weight = 30
