Change internal structure of posts to flat hierarchy
Originally thought that it would be nice to have it separated out into
date-based directories but it makes my .md files way too spread out.

This also introduces a breaking change as URLs are now based off of post
TITLES rather than post filenames.

--- a/config.toml
+++ b/config.toml
@@ -25,6 +25,9 @@ disqusShortname = "blog-jwon-me"
   tag = "tags"
   # Categories are disabled by default.
 
+[permalinks]
+  posts = "/posts/:year/:month/:day/:title/"
+
 [params]
   dateform        = "Jan 2, 2006"
   dateformShort   = "Jan 2"
