--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://jwon.me"
+baseURL = "https://www.jwon.me"
 languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "/home/jwon"
