--- a/config.toml
+++ b/config.toml
@@ -78,11 +78,16 @@ disqusShortname = "blog-jwon-me"
     weight = 10
 
   [[menu.main]]
+    name = "Talks"
+    url = "talks/"
+    weight = 20
+
+  [[menu.main]]
     name = "Tags"
     url = "tags/"
-    weight = 20
+    weight = 30
 
   [[menu.main]]
     name = "About"
     url = "about/"
-    weight = 30
+    weight = 40
