Add author e-mail in config.toml
This enables the author tag in the RSS feed:
https://gohugo.io/templates/rss/

--- a/config.toml
+++ b/config.toml
@@ -15,6 +15,7 @@ disqusShortname = "blog-jwon-me"
 
 [author]
   name = "James Won"
+  email = "website@jwon.me"
 
 [blackfriday]
   # hrefTargetBlank = true
