Add author to post pages

--- a/config.toml
+++ b/config.toml
@@ -30,6 +30,7 @@ disqusShortname = "blog-jwon-me"
   posts = "/posts/:year/:month/:day/:title/"
 
 [params]
+  author = "James Won"
   dateform        = "Jan 2, 2006"
   dateformShort   = "Jan 2"
   dateformNum     = "2006-01-02"
